Also report p-values for question item correlations.

--- a/notebooks/01_high_level_analysis.ipynb
+++ b/notebooks/01_high_level_analysis.ipynb
@@ -31,8 +31,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-17T13:41:35.668670Z",
-     "start_time": "2025-08-17T13:41:35.660034Z"
+     "end_time": "2025-08-21T16:13:32.350786Z",
+     "start_time": "2025-08-21T16:13:32.345955Z"
     }
    },
    "source": [
@@ -45,7 +45,7 @@
     "df = pd.read_csv(file_path, sep=';')"
    ],
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -64,8 +64,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-17T13:41:36.193948Z",
-     "start_time": "2025-08-17T13:41:35.674923Z"
+     "end_time": "2025-08-21T16:13:32.816219Z",
+     "start_time": "2025-08-21T16:13:32.361205Z"
     }
    },
    "source": [
@@ -117,7 +117,7 @@
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -132,8 +132,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-17T13:41:36.202610Z",
-     "start_time": "2025-08-17T13:41:36.198044Z"
+     "end_time": "2025-08-21T16:13:32.827293Z",
+     "start_time": "2025-08-21T16:13:32.821658Z"
     }
    },
    "source": [
@@ -146,7 +146,7 @@
     "df = pd.read_csv(file_path, sep=';')"
    ],
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -161,8 +161,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-17T13:41:36.207842Z",
-     "start_time": "2025-08-17T13:41:36.205797Z"
+     "end_time": "2025-08-21T16:13:32.833808Z",
+     "start_time": "2025-08-21T16:13:32.830469Z"
     }
    },
    "source": [
@@ -170,7 +170,7 @@
     "completed = df[df[\"Finished\"] == 1]"
    ],
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -185,11 +185,24 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-17T13:41:36.214891Z",
-     "start_time": "2025-08-17T13:41:36.210876Z"
+     "end_time": "2025-08-21T16:56:39.737081Z",
+     "start_time": "2025-08-21T16:56:39.726357Z"
     }
    },
    "source": [
+    "import numpy as np\n",
+    "from scipy.stats import pearsonr, spearmanr\n",
+    "\n",
+    "def corr_with_p(df, x, y, method='spearman', round_r=2, round_p=5):\n",
+    "    pair = df[[x, y]].dropna()\n",
+    "    if len(pair) < 3 or pair[x].nunique() < 2 or pair[y].nunique() < 2:\n",
+    "        return np.nan, np.nan, len(pair)\n",
+    "    if method == 'spearman':\n",
+    "        r, p = spearmanr(pair[x], pair[y])\n",
+    "    else:\n",
+    "        r, p = pearsonr(pair[x], pair[y])\n",
+    "    return round(r, round_r), round(p, round_p), len(pair)\n",
+    "\n",
     "# 3. Calculate the required metrics\n",
     "metrics = {\n",
     "    \"Total number of responses\": len(df),\n",
@@ -201,20 +214,36 @@
     "    \"Average Python experience (years)\": completed[\"Q2.2\"].mean(),\n",
     "    \"Average general experience (years)\": completed[\"Q2.3\"].mean(),\n",
     "    \"Average estimated correct answers\": completed[\"Q11.1\"].mean(),\n",
+    "\n",
     "    # Some correlations\n",
-    "    \"Pearson Correlation (Python YoE and Dreyfus level)\":\n",
-    "        completed[[\"Q2.2\", \"Q2.1\"]].corr().iloc[0, 1],\n",
-    "    \"Pearson Correlation (Python YoE and General programming YoE)\": completed[[\"Q2.2\", \"Q2.3\"]].corr().iloc[0, 1],\n",
-    "    \"Spearman Correlation (Dreyfus level and self-reported correct score)\":\n",
-    "        completed[[\"Q2.1\", \"Q11.1\"]].corr(method='spearman').iloc[0, 1],\n",
-    "    \"Spearman Correlation (Python YoE and self-reported correct score)\":\n",
-    "        completed[[\"Q2.2\", \"Q11.1\"]].corr(method='spearman').iloc[0, 1],\n",
-    "    \"Spearman Correlation (General programming YoE and self-reported correct score)\":\n",
-    "        completed[[\"Q2.3\", \"Q11.1\"]].corr(method='spearman').iloc[0, 1]\n",
-    "}"
+    "    # \"Spearman Correlation (Python YoE and Dreyfus level)\":\n",
+    "    #     completed[[\"Q2.2\", \"Q2.1\"]].corr(method='spearman').iloc[0, 1],\n",
+    "    # \"Pearson Correlation (Python YoE and General programming YoE)\": completed[[\"Q2.2\", \"Q2.3\"]].corr().iloc[0, 1],\n",
+    "    # \"Spearman Correlation (Dreyfus level and self-reported correct score)\":\n",
+    "    #     completed[[\"Q2.1\", \"Q11.1\"]].corr(method='spearman').iloc[0, 1],\n",
+    "    # \"Spearman Correlation (Python YoE and self-reported correct score)\":\n",
+    "    #     completed[[\"Q2.2\", \"Q11.1\"]].corr(method='spearman').iloc[0, 1],\n",
+    "    # \"Spearman Correlation (General programming YoE and self-reported correct score)\":\n",
+    "    #     completed[[\"Q2.3\", \"Q11.1\"]].corr(method='spearman').iloc[0, 1]\n",
+    "}\n",
+    "\n",
+    "r, p, n = corr_with_p(completed, 'Q2.2', 'Q2.1', method='spearman')\n",
+    "metrics[\"Spearman (Python YoE ↔ Dreyfus)\"] = {\"r\": r, \"p\": p, \"n\": n}\n",
+    "\n",
+    "r, p, n = corr_with_p(completed, 'Q2.2', 'Q2.3', method='pearson')\n",
+    "metrics[\"Pearson (Python YoE ↔ General YoE)\"] = {\"r\": r, \"p\": p, \"n\": n}\n",
+    "\n",
+    "r, p, n = corr_with_p(completed, 'Q2.1', 'Q11.1', method='spearman')\n",
+    "metrics[\"Spearman (Dreyfus ↔ self-reported correct)\"] = {\"r\": r, \"p\": p, \"n\": n}\n",
+    "\n",
+    "r, p, n = corr_with_p(completed, 'Q2.2', 'Q11.1', method='spearman')\n",
+    "metrics[\"Spearman (Python YoE ↔ self-reported correct)\"] = {\"r\": r, \"p\": p, \"n\": n}\n",
+    "\n",
+    "r, p, n = corr_with_p(completed, 'Q2.3', 'Q11.1', method='spearman')\n",
+    "metrics[\"Spearman (General YoE ↔ self-reported correct)\"] = {\"r\": r, \"p\": p, \"n\": n}"
    ],
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 21
   },
   {
    "cell_type": "markdown",
@@ -229,8 +258,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-17T13:41:36.223986Z",
-     "start_time": "2025-08-17T13:41:36.217796Z"
+     "end_time": "2025-08-21T16:56:39.750694Z",
+     "start_time": "2025-08-21T16:56:39.740698Z"
     }
    },
    "source": [
@@ -258,89 +287,89 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x11af28740>"
+       "<pandas.io.formats.style.Styler at 0x1255479e0>"
       ],
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_90d17\">\n",
+       "<table id=\"T_62655\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_90d17_level0_col0\" class=\"col_heading level0 col0\" >Metric</th>\n",
-       "      <th id=\"T_90d17_level0_col1\" class=\"col_heading level0 col1\" >Value</th>\n",
+       "      <th id=\"T_62655_level0_col0\" class=\"col_heading level0 col0\" >Metric</th>\n",
+       "      <th id=\"T_62655_level0_col1\" class=\"col_heading level0 col1\" >Value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_90d17_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_90d17_row0_col0\" class=\"data row0 col0\" >Total number of responses</td>\n",
-       "      <td id=\"T_90d17_row0_col1\" class=\"data row0 col1\" >78.00</td>\n",
+       "      <th id=\"T_62655_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_62655_row0_col0\" class=\"data row0 col0\" >Total number of responses</td>\n",
+       "      <td id=\"T_62655_row0_col1\" class=\"data row0 col1\" >78</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_90d17_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_90d17_row1_col0\" class=\"data row1 col0\" >Total number of completed responses</td>\n",
-       "      <td id=\"T_90d17_row1_col1\" class=\"data row1 col1\" >60.00</td>\n",
+       "      <th id=\"T_62655_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_62655_row1_col0\" class=\"data row1 col0\" >Total number of completed responses</td>\n",
+       "      <td id=\"T_62655_row1_col1\" class=\"data row1 col1\" >60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_90d17_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_90d17_row2_col0\" class=\"data row2 col0\" >Completion rate (%)</td>\n",
-       "      <td id=\"T_90d17_row2_col1\" class=\"data row2 col1\" >76.92</td>\n",
+       "      <th id=\"T_62655_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_62655_row2_col0\" class=\"data row2 col0\" >Completion rate (%)</td>\n",
+       "      <td id=\"T_62655_row2_col1\" class=\"data row2 col1\" >76.92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_90d17_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_90d17_row3_col0\" class=\"data row3 col0\" >Average duration (sec)</td>\n",
-       "      <td id=\"T_90d17_row3_col1\" class=\"data row3 col1\" >26528.42</td>\n",
+       "      <th id=\"T_62655_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_62655_row3_col0\" class=\"data row3 col0\" >Average duration (sec)</td>\n",
+       "      <td id=\"T_62655_row3_col1\" class=\"data row3 col1\" >26528.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_90d17_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_90d17_row4_col0\" class=\"data row4 col0\" >Median duration (sec)</td>\n",
-       "      <td id=\"T_90d17_row4_col1\" class=\"data row4 col1\" >986.50</td>\n",
+       "      <th id=\"T_62655_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_62655_row4_col0\" class=\"data row4 col0\" >Median duration (sec)</td>\n",
+       "      <td id=\"T_62655_row4_col1\" class=\"data row4 col1\" >986.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_90d17_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
-       "      <td id=\"T_90d17_row5_col0\" class=\"data row5 col0\" >Average Dreyfus level</td>\n",
-       "      <td id=\"T_90d17_row5_col1\" class=\"data row5 col1\" >4.02</td>\n",
+       "      <th id=\"T_62655_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_62655_row5_col0\" class=\"data row5 col0\" >Average Dreyfus level</td>\n",
+       "      <td id=\"T_62655_row5_col1\" class=\"data row5 col1\" >4.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_90d17_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
-       "      <td id=\"T_90d17_row6_col0\" class=\"data row6 col0\" >Average Python experience (years)</td>\n",
-       "      <td id=\"T_90d17_row6_col1\" class=\"data row6 col1\" >5.70</td>\n",
+       "      <th id=\"T_62655_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+       "      <td id=\"T_62655_row6_col0\" class=\"data row6 col0\" >Average Python experience (years)</td>\n",
+       "      <td id=\"T_62655_row6_col1\" class=\"data row6 col1\" >5.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_90d17_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
-       "      <td id=\"T_90d17_row7_col0\" class=\"data row7 col0\" >Average general experience (years)</td>\n",
-       "      <td id=\"T_90d17_row7_col1\" class=\"data row7 col1\" >12.77</td>\n",
+       "      <th id=\"T_62655_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
+       "      <td id=\"T_62655_row7_col0\" class=\"data row7 col0\" >Average general experience (years)</td>\n",
+       "      <td id=\"T_62655_row7_col1\" class=\"data row7 col1\" >12.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_90d17_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
-       "      <td id=\"T_90d17_row8_col0\" class=\"data row8 col0\" >Average estimated correct answers</td>\n",
-       "      <td id=\"T_90d17_row8_col1\" class=\"data row8 col1\" >12.22</td>\n",
+       "      <th id=\"T_62655_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
+       "      <td id=\"T_62655_row8_col0\" class=\"data row8 col0\" >Average estimated correct answers</td>\n",
+       "      <td id=\"T_62655_row8_col1\" class=\"data row8 col1\" >12.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_90d17_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
-       "      <td id=\"T_90d17_row9_col0\" class=\"data row9 col0\" >Pearson Correlation (Python YoE and Dreyfus level)</td>\n",
-       "      <td id=\"T_90d17_row9_col1\" class=\"data row9 col1\" >0.34</td>\n",
+       "      <th id=\"T_62655_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
+       "      <td id=\"T_62655_row9_col0\" class=\"data row9 col0\" >Spearman (Python YoE ↔ Dreyfus)</td>\n",
+       "      <td id=\"T_62655_row9_col1\" class=\"data row9 col1\" >{'r': np.float64(0.52), 'p': np.float64(3e-05), 'n': 60}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_90d17_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
-       "      <td id=\"T_90d17_row10_col0\" class=\"data row10 col0\" >Pearson Correlation (Python YoE and General programming YoE)</td>\n",
-       "      <td id=\"T_90d17_row10_col1\" class=\"data row10 col1\" >0.55</td>\n",
+       "      <th id=\"T_62655_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
+       "      <td id=\"T_62655_row10_col0\" class=\"data row10 col0\" >Pearson (Python YoE ↔ General YoE)</td>\n",
+       "      <td id=\"T_62655_row10_col1\" class=\"data row10 col1\" >{'r': np.float64(0.55), 'p': np.float64(1e-05), 'n': 60}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_90d17_level0_row11\" class=\"row_heading level0 row11\" >11</th>\n",
-       "      <td id=\"T_90d17_row11_col0\" class=\"data row11 col0\" >Spearman Correlation (Dreyfus level and self-reported correct score)</td>\n",
-       "      <td id=\"T_90d17_row11_col1\" class=\"data row11 col1\" >0.35</td>\n",
+       "      <th id=\"T_62655_level0_row11\" class=\"row_heading level0 row11\" >11</th>\n",
+       "      <td id=\"T_62655_row11_col0\" class=\"data row11 col0\" >Spearman (Dreyfus ↔ self-reported correct)</td>\n",
+       "      <td id=\"T_62655_row11_col1\" class=\"data row11 col1\" >{'r': np.float64(0.35), 'p': np.float64(0.00655), 'n': 60}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_90d17_level0_row12\" class=\"row_heading level0 row12\" >12</th>\n",
-       "      <td id=\"T_90d17_row12_col0\" class=\"data row12 col0\" >Spearman Correlation (Python YoE and self-reported correct score)</td>\n",
-       "      <td id=\"T_90d17_row12_col1\" class=\"data row12 col1\" >0.24</td>\n",
+       "      <th id=\"T_62655_level0_row12\" class=\"row_heading level0 row12\" >12</th>\n",
+       "      <td id=\"T_62655_row12_col0\" class=\"data row12 col0\" >Spearman (Python YoE ↔ self-reported correct)</td>\n",
+       "      <td id=\"T_62655_row12_col1\" class=\"data row12 col1\" >{'r': np.float64(0.24), 'p': np.float64(0.06238), 'n': 60}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_90d17_level0_row13\" class=\"row_heading level0 row13\" >13</th>\n",
-       "      <td id=\"T_90d17_row13_col0\" class=\"data row13 col0\" >Spearman Correlation (General programming YoE and self-reported correct score)</td>\n",
-       "      <td id=\"T_90d17_row13_col1\" class=\"data row13 col1\" >0.03</td>\n",
+       "      <th id=\"T_62655_level0_row13\" class=\"row_heading level0 row13\" >13</th>\n",
+       "      <td id=\"T_62655_row13_col0\" class=\"data row13 col0\" >Spearman (General YoE ↔ self-reported correct)</td>\n",
+       "      <td id=\"T_62655_row13_col1\" class=\"data row13 col1\" >{'r': np.float64(0.03), 'p': np.float64(0.82473), 'n': 60}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
@@ -350,7 +379,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 18
+   "execution_count": 22
   }
  ],
  "metadata": {
